Mon Apr 18 15:41:17 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:
	* tao/Makefile.am:

	  Regenerate.

	* tao/tao.mpc:

	  Add ORBInitInfoS.h and PolicyFactoryS.h to list of header
	  files.

Mon Apr 18 11:50:08 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Exception.h (_type):
	* tao/Exception.cpp (_type):
	* tao/SystemException.h (_type):
	* tao/SystemException.cpp (_type):

	  The TypeCode rewrite changed the name of the generated
	  _type() user exception method to _tao_type() since it specific
	  to TAO.  However, those changes were not propagated to the
	  CORBA::Exception base class and CORBA::SystemException classes.
	  As a result, code that attempted to retrieve the user exception
	  TypeCode using the _type() method would end up with the base
	  class method returning a nil TypeCode.  Renamed the _type()
	  method to _tao_type() in these files.  Fixes memory related
	  problems when attempting to call TypeCode methods on a TypeCode
	  retrieved from an Any containing a user exception.

	* tests/Portable_Interceptors/Collocated/Dynamic/run_test.pl:

	  Made test title output more descriptive.

Mon Apr 18 08:00:17 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/Event/ECG_Adapters.h (~TAO_ECG_Dgram_Handler):
	* orbsvcs/orbsvcs/Event/ECG_Adapters.cpp (~TAO_ECG_Dgram_Handler):

	  Added missing virtual destructor.  Fixes a g++ 4.0 warning.

	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ClientScheduler_i.cpp:

	  Moved inlined virtual methods out of line to this file.

	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ClientScheduler_i.h:

	  Cleaned up CORBA::Environment arguments to better conform to
	  current TAO conventions.

	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ClientScheduler_i.i:

	  Moved inline virtual methods out of line.

	  Removed this file since it is now empty.

Mon Apr 18 13:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
